update: no key supported

--- a/src/react/components/pages/projectSettings/newProjectForm.json
+++ b/src/react/components/pages/projectSettings/newProjectForm.json
@@ -21,17 +21,6 @@
             "description": "Subfolder path to your files",
             "type": "string"
         },
-        "apiUriBase": {
-            "title": "Form recognizer service URI",
-            "description": "Form recognizer service URI",
-            "type": "string",
-            "format": "uri"
-        },
-        "apiKey": {
-            "title": "API key",
-            "description": "API key",
-            "type": "string"
-        },
         "description": {
             "title": "${strings.common.description}",
             "type": "string"
@@ -39,7 +28,6 @@
     },
     "required": [
         "name",
-        "sourceConnection",
-        "apiUriBase"
+        "sourceConnection"
     ]
 }
