feat: add project type options in project settings
link #52.

--- a/src/react/components/pages/projectSettings/projectForm.ui.json
+++ b/src/react/components/pages/projectSettings/projectForm.ui.json
@@ -11,6 +11,9 @@
     "sourceConnection": {
         "ui:field": "sourceConnection"
     },
+    "projectType": {
+        "ui:field": "projectType"
+    },
     "targetConnection": {
         "ui:field": "targetConnection"
     },
