--- a/src/react/components/pages/projectSettings/newProjectForm.json
+++ b/src/react/components/pages/projectSettings/newProjectForm.json
@@ -6,17 +6,13 @@
             "type": "string",
             "pattern": "^[^\\\\\\\\/:*?\\\\\\\"<>|]*$"
         },
-        "securityToken": {
-            "title": "${strings.projectSettings.securityToken.title}",
-            "description": "${strings.projectSettings.securityToken.description}",
-            "type": "string"
-        },
-        "description": {
-            "title": "${strings.common.description}",
+        "projectType": {
+            "title": "${strings.common.projectType}",
             "type": "string"
         }
     },
     "required": [
-        "name"
+        "name",
+        "projectType"
     ]
 }
