--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "serialize-javascript": "^3.0.0",
         "shortid": "^2.2.15",
         "utif": "^3.1.0",
-        "vott-react": "^0.2.12"
+        "vott-react": "^0.2.12",
+        "markdown": "^0.5.0"
     },
     "scripts": {
         "start": "nf start -p 3000",
