--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
         "shortid": "^2.2.15",
         "utif": "^3.1.0",
         "vott-react": "^0.2.12",
-        "markdown": "^0.5.0"
+        "markdown": "^0.5.0",
+        "echarts": "^4.8.0",
+        "echarts-for-react": "^2.0.15-beta.1"
     },
     "scripts": {
         "start": "nf start -p 3000",
